--- a/src/custom.css
+++ b/src/custom.css
@@ -7,27 +7,27 @@ a.site-title > img {
 }
 
 .sl-flex.actions {
-  @apply h-min gap-4
+  @apply h-min gap-4;
 }
 
 .action {
-  @apply font-semibold
+  @apply font-semibold;
 }
 
 .action.primary {
-  @apply py-3 px-6 text-white bg-blue-600 hover:bg-blue-500 transition-colors duration-200
+  @apply py-3 px-6 text-white bg-blue-600 hover:bg-blue-500 transition-colors duration-200;
 }
 
 .action.minimal {
-  @apply py-3 px-6 bg-zinc-800 hover:bg-zinc-700 transition-colors duration-200
+  @apply py-3 pl-6 pr-5 bg-zinc-800 hover:bg-zinc-700 transition-colors duration-200;
 }
 
 .hero {
-  @apply py-20
+  @apply py-20;
 }
 
 .card-grid article {
-  @apply rounded-md bg-zinc-800 border-none
+  @apply rounded-md bg-zinc-800 border-none;
 }
 
 [data-has-hero] header {
